# full-stack-flask-smorest

./: .flaskenv  .gitignore  .pylintrc  .travis.yml  CHANGLOG.rst  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  supervisord.conf
admin/: __init__.py  app.py  factory.py  formaters.py  forms.py  processor.py  register.py
admin/extensions/: __init__.py
admin/extensions/admin/: __init__.py  converter.py  filters.py  (+1 more)
admin/views/: __init__.py  admin.py  bases.py  celery.py  email_templates.py  logs.py  menus.py  profile.py  storages.py  users.py
app/: __init__.py  app.py  factory.py
app/admin/: __init__.py  formaters.py  forms.py  processor.py  register.py
app/backtasks/: __init__.py  send_mail.py  sighandler.py  storages.py
app/extensions/: __init__.py
app/modules/: __init__.py
app/socketio/: __init__.py  auth.py  decorators.py  session.py  tasks.py
app/templates/: my_master.html
app/utils/: __init__.py  converters.py  db.py  formatters.py  imports.py  local.py  req_parses.py  secure.py
cmds/: hosts.bat
migrations/: env.py  initial_development_data.py  script.py.mako
scripts/: initapp.sh
scripts/mongo/: init.js
tasks/: __init__.py
tasks/app/: __init__.py  _utils.py  boilerplates.py  celery.py  db.py  dependencies.py  env.py  init.py  manager.py  run.py  tests.py  users.py  winpress.py
tests/: conftest.py  test_create_app.py  utils.py
tests/backtasks/: conftest.py  test_sendmail.py
tests/services/: test_users.py  users.py
tests/socketio/: test_auth.py  test_session.py  test_tasks.py
(+162 files in other folders)
